# Yomi-Reader

./: .gitignore  CNAME  Cargo.toml  README.md  Trunk.toml  flake.nix  index.html  tailwind.config.js  tailwind_compiled-1aa333231e1f688b.css  tailwind_compiled-36267a313f6d994b.css  tailwind_compiled-4af0dab26ff5fe48.css  tailwind_compiled-59e3db1e787c5ba4.css  tailwind_compiled-6ac63237add6e72d.css  tailwind_compiled-f3a9f4bb17e65639.css  yomi-reader-147e38b1981d8fe3.js  yomi-reader-147e38b1981d8fe3_bg.wasm  yomi-reader-1c013e1a12fd0a61.js  yomi-reader-1c013e1a12fd0a61_bg.wasm  yomi-reader-372be8295375290a.js  yomi-reader-372be8295375290a_bg.wasm  yomi-reader-3b50047d45d58296.js  yomi-reader-3b50047d45d58296_bg.wasm  yomi-reader-3eaab791921895ed.js  yomi-reader-3eaab791921895ed_bg.wasm  yomi-reader-4b288a64ef4dfd66.js  yomi-reader-4b288a64ef4dfd66_bg.wasm  yomi-reader-6e8b05cf8a9a72a7.js  yomi-reader-6e8b05cf8a9a72a7_bg.wasm  yomi-reader-70d24c2c670d0833.js  yomi-reader-70d24c2c670d0833_bg.wasm  yomi-reader-72ab836a3e767cf0.js  yomi-reader-72ab836a3e767cf0_bg.wasm  yomi-reader-764f6c2d22ece006.js  yomi-reader-764f6c2d22ece006_bg.wasm  yomi-reader-7e20bda8a3ea258b.js  yomi-reader-7e20bda8a3ea258b_bg.wasm  yomi-reader-83347bb81d99df10.js  yomi-reader-83347bb81d99df10_bg.wasm  yomi-reader-a2021061b7a14a1f.js  yomi-reader-a2021061b7a14a1f_bg.wasm  (+16 more)
.github/workflows/: CD.yml  CI.yml
css/: tailwind_compiled.css
snippets/dioxus-interpreter-js-1676574062e4c953/: inline0.js
snippets/dioxus-interpreter-js-dab579f08da5298b/: inline0.js
src/: definitions.rs  info_state.rs  main.rs  nav.rs  read_state.rs  reader.rs  upload_component.rs  view.rs
