[package]
name = "vocreader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["web"] }
epub = "1.2.4"
yomi-dict = { git = "ssh://git@github.com/ShaddyDC/yomi-dict.git" }
log = "0.4.6"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.60"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Selection",
    "Window",
    "Blob",
    "Element",
    "HtmlInputElement",
    "FileList",
    "File",
]
