[package]
name = "yomi-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2", features = ["web"] }
epub = "2"
log = "0.4"
wasm-logger = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
base64 = "0"
async-trait = "0.1"
thiserror = "1.0"
serde-wasm-bindgen = "0.4"
serde = "1"

[dependencies.yomi-dict]
git = "https://github.com/ShaddyDC/yomi-dict"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Selection",
    "Window",
    "Document",
    "Blob",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "FileList",
    "File",
    "Storage",
]

[profile.release]
strip = "debuginfo"
opt-level = "z"
lto = true
